--- a/ImplementationofChatbot.ipynb
+++ b/ImplementationofChatbot.ipynb
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "ae7f4f17-e600-4072-af5b-4368ce0076b9",
    "metadata": {},
    "outputs": [
@@ -667,12 +667,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi there\n"
+      "Hello\n"
      ]
     }
    ],
    "source": [
-    "user_input = \"budget\"\n",
+    "user_input = \"Hi\"\n",
     "response = chatbot(user_input)\n",
     "print(response)"
    ]
